<resources>
    <string name="app_name">MyMovieApp</string>
    <string name="try_again">Try Again</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="timeout_error_message">Looks like the server is taking to long to respond, this can be caused by either poor connectivity or an error with our servers. Please try again in a while</string>
    <string name="error">Error</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="my_list">My List</string>
    <string name="Category_Name_Popular">Popular</string>
    <string name="Category_Name_Up_Coming">Up Coming</string>
    <string name="Category_Name_Top_Rated">Top Rated</string>
    <string name="loading">Loading…</string>
    <string name="see_all">See All</string>
    <string name="more_like_this">More Like This</string>
    <string name="comments">Comments</string>
    <string name="trailers">Trailers</string>
    <string name="show_more">Show more</string>
    <string name="show_less">Show less</string>
    <string name="more_detail">More detail…</string>
    <string name="movie_detail_comment_empty_list_string">There Is No Comment for This Movie</string>
    <string name="movie_detail_trailer_empty_list_string">There Is No Trailer for This Movie</string>
    <string name="your_search_not_found">Opps.. We Could Not Find Your Search</string>

    <string name="search_your_movie">Search your movie…</string>
    <string name="email">E Mail</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="log_in">Sign In</string>
    <string name="remember_me">Remember me</string>
    <string name="login_title">Login to Your Account</string>
    <string name="sign_up_title">Create Your Account</string>
    <string name="is_empty_validation_text">This area should not be empty.</string>
    <string name="password_validation_text">This password is not valid.</string>
    <string name="password_confirm_validation_text">Passwords does not match</string>
    <string name="email_validation_text">This email is not valid.</string>
    <string name="forgot_to_password">Forgot to Password?</string>

    <string name="sort_and_filter">Sort &amp; Filter</string>
    <string name="regions">Regions</string>
    <string name="genres">Genres</string>
    <string name="time_period">Time/Period</string>
    <string name="sort">Sort</string>
    <string name="apply">Apply</string>
    <string name="reset">Reset</string>
    <string name="all_genres">All Genres</string>
    <string name="all_regions">All Regions</string>
    <string name="all_periods">All Periods</string>

    <string name="tr">Turkiye</string>
    <string name="us">United State of America</string>
    <string name="az">Azerbaijan</string>
    <string name="cn">China</string>
    <string name="kr">South Korea</string>
    <string name="de">Germany</string>
    <string name="jp">Japan</string>
    <string name="ru">Russia</string>

    <string name="popularity">Popularity</string>
    <string name="latest_release">Latest Release</string>
    <string name="movie_score">Movie Score</string>
    <string name="explore_title">%1$s Movies See All Page</string>

    <string-array name="movieFilterRegionList">
        <item>@string/tr</item>
        <item>@string/us</item>
        <item>@string/az</item>
        <item>@string/cn</item>
        <item>@string/kr</item>
        <item>@string/de</item>
        <item>@string/jp</item>
        <item>@string/ru</item>
    </string-array>

    <string-array name="movieFilterSortList">
        <item>@string/popularity</item>
        <item>@string/latest_release</item>
        <item>@string/movie_score</item>
    </string-array>

    <string name="sign_up_or_continue_text">or continue with</string>
    <string name="sign_up_google_sign_up_text">Continue with Google Account</string>
    <string name="sign_up_facebook_sign_up_text">Continue with Facebook Account</string>
    <string name="sign_up_tmdb_sign_up_text">Continue with TMDB Account</string>
    <string name="do_not_show_this_again">Do not show this again</string>
    <string name="create_account_success_dialog_title">Create Account</string>
    <string name="create_account_failure_dialog_title">Create Account Fail!</string>
    <string name="sign_in_failure_dialog_title">Sign In Fail!</string>
    <string name="create_account_success_dialog_content">Create account has successfully done.</string>
    <string name="continue_button">Continue</string>
    <string name="try_again_button">Try Again</string>
    <string name="got_it">Got it.</string>
    <string name="cancel_button">Cancel</string>

    <string name="account">Account</string>
    <string name="language">Language</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="terms_and_conditions">Terms &amp; Conditions</string>
    <string name="faq">FAQ</string>
    <string name="log_out">Log Out</string>


    <string name="empty" translatable="false" />

    <string name="facebook_app_id">930923725177555</string>
    <string name="fb_login_protocol_scheme">fb1234</string>
    <string name="facebook_client_token">5e73d5437fd1add875453b8b8f5258a5</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>