<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.example.mymovieapp.features.explore.ui.dialog.ExploreMovieFilterDialogViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/filter_dialog_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort_and_filter"
            android:textColor="@color/primary_color"
            style="@style/Movies.H1"
            android:textSize="40sp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginVertical="@dimen/space_12"
            android:gravity="center" />

        <View
            android:id="@+id/filter_dialog_line"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_2"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_title"
            android:layout_marginVertical="@dimen/space_12"
            android:background="@color/warm_grey" />

        <TextView
            android:id="@+id/filter_dialog_regions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/regions"
            style="@style/Filter.Dialog.Title"
            android:layout_marginTop="@dimen/space_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_line" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_dialog_regions_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_regions_text"
            android:layout_marginTop="@dimen/space_12"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/filter_dialog_filter_item" />

        <TextView
            android:id="@+id/filter_dialog_genre_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/genres"
            style="@style/Filter.Dialog.Title"
            android:layout_marginTop="@dimen/space_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_regions_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_dialog_genre_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_genre_text"
            android:layout_marginTop="@dimen/space_12"
            tools:listitem="@layout/filter_dialog_filter_item" />

        <TextView
            android:id="@+id/filter_dialog_time_period_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time_period"
            style="@style/Filter.Dialog.Title"
            android:layout_marginTop="@dimen/space_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_genre_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_dialog_time_period_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_time_period_text"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_marginTop="@dimen/space_12"
            tools:listitem="@layout/filter_dialog_filter_item" />

        <TextView
            android:id="@+id/filter_dialog_sort_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            style="@style/Filter.Dialog.Title"
            android:layout_marginTop="@dimen/space_12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_time_period_recycler_view" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/filter_dialog_sort_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_sort_text"
            android:layout_marginTop="@dimen/space_12"
            tools:listitem="@layout/filter_dialog_filter_item" />

        <View
            android:id="@+id/filter_dialog_line2"
            android:layout_width="match_parent"
            android:layout_height="@dimen/space_2"
            app:layout_constraintTop_toBottomOf="@id/filter_dialog_sort_recycler_view"
            android:layout_marginVertical="@dimen/space_12"
            android:background="@color/warm_grey" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/resetButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/UnfilledBorderedButton"
            android:text="@string/reset"
            android:elevation="2dp"
            app:layout_constraintTop_toBottomOf="@+id/filter_dialog_line2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/applyButton"
            android:layout_marginVertical="@dimen/space_12"
            android:layout_marginStart="@dimen/space_12" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/applyButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/Button.Main"
            android:enabled="@{viewModel.movieFilterButtonState}"
            android:text="@string/apply"
            android:layout_margin="@dimen/space_12"
            app:layout_constraintTop_toBottomOf="@+id/filter_dialog_line2"
            app:layout_constraintStart_toEndOf="@id/resetButton"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>