<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.auth.ui.LoginFragment">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="300dp"
            android:layout_height="280dp"
            android:src="@drawable/app_icon"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_field_container"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardElevation="@dimen/space_2"
            app:cardCornerRadius="@dimen/space_24"
            android:layout_marginTop="@dimen/space_128"
            android:backgroundTint="@color/white_three"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.8"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Create Your Account"
                    android:text="@string/sign_up_title"
                    style="@style/Movies.LoginPage.Title"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/space_8"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_email"
                    style="@style/TextInputLayout.Auth"
                    app:layout_constraintTop_toBottomOf="@id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_16"
                    app:boxCornerRadiusTopStart="@dimen/space_16"
                    app:boxCornerRadiusTopEnd="@dimen/space_16"
                    app:boxCornerRadiusBottomStart="@dimen/space_16"
                    app:boxCornerRadiusBottomEnd="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_32"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_mailaddress_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/playfair_display_regular"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColorHint="@color/brownGrey"
                        android:textSize="16sp"
                        tools:text="test@rapsodo.com" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_password"
                    style="@style/TextInputLayout.Auth"
                    app:layout_constraintTop_toBottomOf="@id/textinput_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="@dimen/space_16"
                    app:boxCornerRadiusTopStart="@dimen/space_16"
                    app:boxCornerRadiusTopEnd="@dimen/space_16"
                    app:boxCornerRadiusBottomStart="@dimen/space_16"
                    app:boxCornerRadiusBottomEnd="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_16"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_password_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/playfair_display_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColorHint="@color/brownGrey"
                        android:textSize="16sp"
                        tools:text="Aa123456" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button_sign_up"
                    style="@style/Button.Main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_12"
                    android:layout_marginTop="@dimen/space_16"
                    android:enabled="true"
                    app:cornerRadius="@dimen/space_16"
                    tools:text="Create Account"
                    android:text="@string/create_account"
                    android:transitionName="shared_element_container_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textinput_password"/>


                <View
                    android:id="@+id/sign_up_line_1"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/space_2"
                    app:layout_constraintTop_toBottomOf="@id/login_button_sign_up"
                    android:layout_marginTop="@dimen/space_32"
                    android:layout_marginHorizontal="@dimen/space_8"
                    android:background="@color/warm_grey"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="or continue with"
                    app:layout_constraintStart_toStartOf="@id/sign_up_line_1"
                    app:layout_constraintEnd_toEndOf="@id/sign_up_line_1"
                    app:layout_constraintTop_toTopOf="@id/sign_up_line_1"
                    app:layout_constraintBottom_toBottomOf="@id/sign_up_line_1"
                    android:paddingHorizontal="@dimen/space_8"
                    android:background="@color/white_three"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_with_google_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_32"
                    android:layout_marginHorizontal="@dimen/space_24"
                    android:visibility="visible"
                    style="@style/Button.Icon"
                    tools:text="Continue with Google Account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/sign_up_line_1"
                    android:elevation="@dimen/space_2"
                    app:iconTint="@null"
                    app:icon="@drawable/ic_google"
                    />
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_with_facebook_button"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="@dimen/space_8"
                    android:layout_marginHorizontal="@dimen/space_24"
                    android:visibility="visible"
                    style="@style/Button.Icon"
                    android:elevation="@dimen/space_2"
                    app:iconTint="@null"
                    tools:text="Continue with Facebook Account"
                    app:icon="@drawable/ic_facebook"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_with_google_button"
                    />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_with_tmdb_account_button"
                    android:layout_width="0dp"
                    android:layout_marginHorizontal="@dimen/space_24"
                    android:layout_height="50dp"
                    android:layout_marginVertical="@dimen/space_8"
                    android:visibility="visible"
                    style="@style/Button.Icon"
                    tools:text="Continue with TMDB Account"
                    android:elevation="@dimen/space_2"
                    app:iconTint="@null"
                    app:icon="@drawable/ic_tmdb"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_with_facebook_button"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>