<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".features.auth.ui.LoginFragment">

        <ImageView
            android:id="@+id/login_logo"
            android:layout_width="300dp"
            android:layout_height="120dp"
            android:layout_marginTop="@dimen/space_16"
            android:scaleType="centerCrop"
            android:src="@drawable/app_icon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/back_button"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:scaleType="fitCenter"
            android:layout_gravity="center"
            android:src="@drawable/ic_back"
            android:layout_marginTop="@dimen/space_8"
            android:layout_marginStart="@dimen/space_8"
            app:tint="@color/black"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/login_logo"
            />

        <androidx.cardview.widget.CardView
            android:id="@+id/login_field_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:cardElevation="@dimen/space_2"
            app:cardCornerRadius="@dimen/space_24"
            android:layout_marginTop="@dimen/space_64"
            android:backgroundTint="@color/white_three"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintWidth_percent="0.9"
            app:layout_constraintHeight_percent="0.45"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Login to Your Account"
                    style="@style/Movies.LoginPage.Title"
                    android:gravity="center"
                    android:layout_marginTop="@dimen/space_8"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_email"
                    style="@style/TextInputLayout.Auth"
                    app:layout_constraintTop_toBottomOf="@id/login_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_16"
                    app:boxCornerRadiusTopStart="@dimen/space_16"
                    app:boxCornerRadiusTopEnd="@dimen/space_16"
                    app:boxCornerRadiusBottomStart="@dimen/space_16"
                    app:boxCornerRadiusBottomEnd="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_32"
                    app:endIconMode="clear_text"
                    app:startIconDrawable="@drawable/ic_mailaddress_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/playfair_display_regular"
                        android:hint="@string/email"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColorHint="@color/brownGrey"
                        android:textSize="16sp"
                        tools:text="test@rapsodo.com" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textinput_password"
                    style="@style/TextInputLayout.Auth"
                    app:layout_constraintTop_toBottomOf="@id/textinput_email"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginHorizontal="@dimen/space_16"
                    app:boxCornerRadiusTopStart="@dimen/space_16"
                    app:boxCornerRadiusTopEnd="@dimen/space_16"
                    app:boxCornerRadiusBottomStart="@dimen/space_16"
                    app:boxCornerRadiusBottomEnd="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_16"
                    app:endIconMode="password_toggle"
                    app:startIconDrawable="@drawable/ic_password_icon">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/playfair_display_regular"
                        android:hint="@string/password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        android:textColorHint="@color/brownGrey"
                        android:textSize="16sp"
                        tools:text="Aa123456" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/login_remember_me_check_box"
                    android:layout_width="wrap_content"
                    android:layout_height="16dp"
                    android:layout_marginTop="24dp"
                    android:layout_marginEnd="12dp"
                    android:button="@drawable/alert_checkbox"
                    android:checked="false"
                    android:fontFamily="@font/playfair_display_medium"
                    android:paddingHorizontal="5dp"
                    android:text="@string/remember_me"
                    android:textColor="@color/greyishBrown"
                    android:textSize="12sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textinput_password"
                    tools:checked="true"
                    tools:visibility="visible" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/login_button_sign_in"
                    style="@style/Button.Main"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/space_12"
                    android:layout_marginTop="@dimen/space_16"
                    android:enabled="true"
                    app:cornerRadius="@dimen/space_16"
                    tools:text="Sign In"
                    android:text="@string/log_in"
                    android:transitionName="shared_element_container_signup"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_remember_me_check_box"/>

                <TextView
                    android:id="@+id/login_forgotPassword_text"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    tools:text="Forgot to Password?"
                    android:fontFamily="@font/playfair_display_bold"
                    android:textColor="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/login_button_sign_in"
                    android:layout_marginStart="@dimen/space_16"
                    android:layout_marginTop="@dimen/space_8"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="55dp"
            android:elevation="3dp"
            android:layout_marginBottom="-24dp"
            app:layout_constraintWidth_percent="0.8"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="@id/login_field_container">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_with_google_button"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:visibility="visible"
                style="@style/Button.Icon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toStartOf="@id/login_with_facebook_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:elevation="@dimen/space_2"
                app:iconTint="@null"
                app:icon="@drawable/ic_google"
                app:iconPadding="0dp"
                app:iconSize="55dp"
                />
            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_with_facebook_button"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:visibility="visible"
                style="@style/Button.Icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="@dimen/space_2"
                app:iconTint="@null"
                app:icon="@drawable/ic_facebook"
                app:iconPadding="0dp"
                app:iconSize="55dp"
                app:layout_constraintStart_toEndOf="@id/login_with_google_button"
                app:layout_constraintEnd_toStartOf="@id/login_with_tmdb_account_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/login_with_tmdb_account_button"
                android:layout_width="70dp"
                android:layout_height="50dp"
                android:layout_marginEnd="8dp"
                android:visibility="visible"
                style="@style/Button.Icon"
                app:layout_constraintEnd_toEndOf="parent"
                android:elevation="@dimen/space_2"
                app:iconTint="@null"
                app:icon="@drawable/ic_tmdb"
                app:iconPadding="0dp"
                app:iconSize="55dp"
                app:layout_constraintStart_toEndOf="@id/login_with_facebook_button"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>